--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ line-gap-override: 10px
 
 
 .Home {
+  margin-top:10rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
